--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "if-env": "^1.0.0",
     "jest": "^21.2.1",
     "preact-cli": "^2.1.0",
+    "preact-cli-plugin-env-vars": "^1.2.1",
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
+    "firebase": "^5.5.1",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7"
